<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stepper_nav_graph"
    app:startDestination="@+id/stepper_instructions">

    <fragment
        android:id="@+id/stepper_instructions"
        android:name="dev.vicart.remotewaker.views.fragments.stepper.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instruction_stepper" />
    <fragment
        android:id="@+id/stepper_before_continue"
        android:name="dev.vicart.remotewaker.views.fragments.stepper.BeforeContinueFragment"
        android:label="@string/before_continuing_setup"
        tools:layout="@layout/fragment_before_continue_stepper" />
    <fragment
        android:id="@+id/stepper_select_device"
        android:name="dev.vicart.remotewaker.views.fragments.stepper.SelectDeviceFragment"
        android:label="@string/select_your_device"
        tools:layout="@layout/fragment_select_device" />
    <fragment
        android:id="@+id/stepper_computer_infos"
        android:name="dev.vicart.remotewaker.views.fragments.stepper.SelectComputerFragment"
        android:label="@string/select_your_computer"
        tools:layout="@layout/fragment_select_computer" />
</navigation>