<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="dev.vicart.remotewaker.viewmodels.SelectDeviceViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".views.fragments.stepper.SelectDeviceFragment">

        <ProgressBar
            android:id="@+id/select_device_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminate="true"
            android:visibility="@{vm.devices == null ? View.VISIBLE : View.INVISIBLE}"/>

        <LinearLayout
            android:id="@+id/select_device_found_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="@{vm.devices == null ? View.INVISIBLE : View.VISIBLE}">

            <TextView
                android:id="@+id/select_device_found_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/found_device_name"/>
            <TextView
                android:id="@+id/select_device_found_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/found_device_ip"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_device_question"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center">
                <Button
                    android:id="@+id/select_device_no_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:text="@string/no"/>
                <Space
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/select_device_yes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>