<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/devicesFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="dev.vicart.remotewaker.views.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_devicesFragment"
            app:destination="@id/devicesFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/devicesFragment"
        android:name="dev.vicart.remotewaker.views.fragments.DevicesFragment"
        android:label="@string/my_devices"
        tools:layout="@layout/fragment_devices" >
        <action
            android:id="@+id/action_devicesFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/devicesFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_devicesFragment_to_stepperActivity"
            app:destination="@id/stepperActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="dev.vicart.remotewaker.views.fragments.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register"/>
    <activity
        android:id="@+id/stepperActivity"
        android:name="dev.vicart.remotewaker.views.StepperActivity"
        android:label="StepperActivity"
        tools:layout="@layout/activity_stepper"/>
</navigation>