<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="dev.vicart.remotewaker.viewmodels.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.RegisterFragment"
        android:padding="16dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@+id/register_username_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="image"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_username_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/register_password_layout"
            android:layout_marginBottom="16dp"
            android:transitionName="username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:inputType="text"
                android:text="@={vm.username}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/register_username_layout"
            app:layout_constraintStart_toStartOf="@+id/register_username_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:transitionName="password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:text="@={vm.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_confirm_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_password_layout"
            app:layout_constraintStart_toStartOf="@id/register_password_layout"
            app:layout_constraintEnd_toEndOf="@id/register_password_layout"
            android:layout_marginTop="16dp"
            android:hint="@string/password_confirm"
            app:errorEnabled="true"
            app:errorText="@{@string/passwords_not_match}">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_confirm_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/register_password_layout"
            app:layout_constraintTop_toTopOf="@+id/button"
            android:text="@string/has_account_question"
            android:textColor="?attr/colorSecondary"
            android:transitionName="link"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled='@{!vm.username.empty &amp;&amp; !vm.password.empty}'
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/register_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/register_password_confirm_layout"
            android:onClick="@{vm::register}"
            android:transitionName="btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>