<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="dev.vicart.remotewaker.viewmodels.LoginViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.LoginFragment"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@+id/login_username_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="image"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_username_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="username"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:inputType="text"
                android:text="@={vm.username}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/login_username_layout"
            app:layout_constraintStart_toStartOf="@+id/login_username_layout"
            app:layout_constraintTop_toBottomOf="@+id/login_username_layout"
            android:transitionName="password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:text="@={vm.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_link"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_password_layout"
            app:layout_constraintTop_toTopOf="@+id/login_button"
            android:text="@string/no_account_question"
            android:textColor="?attr/colorSecondary"
            android:onClick="@{vm::registerRequested}"
            android:transitionName="link"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled='@{!vm.username.empty &amp;&amp; !vm.password.empty}'
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/login_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
            android:onClick="@{vm::login}"
            android:transitionName="btn"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#CC000000"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="@{vm.isLogging ? View.VISIBLE : View.INVISIBLE}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>